<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_r15_f1f1f1">

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_delete_file"
            android:textAppearance="@style/TextAppearance.Astec.HeadLine3"
            android:textColor="@color/seed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMessage">

            <TextView
                android:id="@+id/textConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:textAppearance="@style/TextAppearance.Astec.HeadLine5"
                android:textColor="@color/design_default_color_error" />

            <TextView
                android:id="@+id/textCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.Astec.HeadLine5"
                android:textColor="@color/seed" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>